--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Akash Kumar Dutta
-description: My Personal Blog
+description: Akash's Blog
 author: Akash Kumar Dutta
 logo: /static/img/avatar.png
 github: https://github.com/AkashKrDutta
