remove feed, totop.js, change layout and configs

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### Site info:
-title: Akash's blog
-tagline: tagline
+title: Bits of Tomorrow
+tagline: Just me thinking out loud here
 author: Author
 email: email
 description: "Description" # You can edit this line in _config.yml. It will appear in your document head meta and in your feed.xml site description
