update contact me

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,9 @@ url: "akashkrdutta.github.io" # the base hostname & protocol for your site
 locale: en_US
 
 ### Personal info and site tools info:
-twitter_username: iamakd1997
+linkedin_username: akash-kumar-dutta
 github_username:  AkashKrDutta
+fb_username: akash.boltzmann
 disqus_shortname: Akash
 favicon: "/images/favicon.ico"
 aboutme: Just thinking out loud here
